--- a/client/src/assets/style/index.scss
+++ b/client/src/assets/style/index.scss
@@ -11,6 +11,8 @@
 @import './ui/buttons';
 @import './ui/inputs';
 @import './components/header';
+@import './components/content';
+@import './components/dialog';
 @import './components/menu/menu';
 @import './components/menu/menu-btn';
 @import './components/menu/auth';
