--- a/client/src/assets/style/components/menu/_editing_profile.scss
+++ b/client/src/assets/style/components/menu/_editing_profile.scss
@@ -1,24 +1,19 @@
-.profile-settings{
-  position: absolute;
-  top: 50%;
-  transform: translate(0, -50%);
-  left: var(--wrapper-padding-inline);
-  right: 17%;
-  display: grid;
+.editing-profile{
+  height: 100%;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
   transition: $transition;
+  padding-right: var(--wrapper-padding-inline);
   &.hidden{
     visibility: hidden;
     opacity: 0;
-    transform: translate(-1rem, -50%);
-    &.secondary{ transform: translate(1rem, -50%); }
-  }
-
-  label{
-    font-weight: 500;
-    line-height: 3;
+    transform: translateX(-1rem);
+    &.secondary{ transform: translateX(1rem); }
   }
 
   .pfp-cont{
+    cursor: pointer;
     position: relative;
     margin: 0 auto;
     svg path{ fill: #fff; }
@@ -29,8 +24,11 @@
       aspect-ratio: 1/1;
       background: lighten($primary, 5);
       border-radius: 50%;
+      background-size: cover;
+      background-position: center;
       .profile{ font-size: 2.3rem; }
     }
+    input[type=file]{ display: none; }
     .edit{
       position: absolute;
       right: 0;
@@ -47,10 +45,11 @@
     input{
       margin-bottom: .25rem;
     }
+    label{ line-height: 3; }
   }
 
   .buttons{
     display: grid;
-    .btn:first-child{ margin-bottom: .5rem; }
+    .btn:first-child{ margin-bottom: .55rem; }
   }
 }
